@@ -1,4 +1,8 @@
 version 0.4.4 - dd-MMM-yyyy
+ . CocosNode: class is not splitted. Doxygen wasn't generating proper documentation.
+	Added #pragma mark for better navigation
+ . Director: class is not splitted. Doxygen wasn't generating proper documentation.
+	Added #pragma mark for better navigation
  . MenuItem: sending correct 'self' as argument (issue 19)
 
 version 0.4.3 - 19-Sept-2008
